# sponge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish.yml
.reasonix/truncated-results/: 1779875458684-bf997706-web_fetch.txt  1779936069026-3c32b135-run_command.txt
docs/: architecture.md  claims.md  cli-reference.md  configuration.md  context-pipeline.md  cost-model.md  decisions.md  faq.md  glossary.md  mcp-integration.md  memory.md  pricing-policy.md  project-plan.md  risk-assessment.md  security.md  self-tuning.md  streaming.md  test-plan.md  worker-agent-guide.md
docs/scenarios/: 01-basic-qa.md  02-code-review.md  03-refactor-with-memory.md  04-bug-fix-with-screenshot.md  05-ci-cd-integration.md  README.md
docs/superpowers/plans/: 2026-05-24-phase-0-foundation.md  2026-05-24-phase-1-cost-aware-hello.md  2026-05-24-phase-1-cost-fingerprint.md  2026-05-24-phase-2-savings-ledger-cache.md  2026-05-26-phase-2-replay-optimizer.md
docs/superpowers/specs/: 2026-05-26-phase-2-replay-optimizer-design.md
npm-wrapper/: package.json
src/sponge/: __init__.py  __main__.py
src/sponge/approval/: __init__.py
src/sponge/cache/: __init__.py  disk_store.py  repo_state.py  result_cache.py  semantic_cache.py
src/sponge/cli/: __init__.py  app.py  benchmark_cmd.py  config_cmd.py  cost_cmd.py  desktop_cmd.py  memory_cmd.py  reflections_cmd.py  run.py  session_cmd.py  tune_cmd.py
src/sponge/config/: __init__.py  settings.py
src/sponge/core/: __init__.py  agent.py  condenser.py  (+6 more)
tests/: conftest.py  mock_provider.py  test_agent.py  test_analyzer.py  test_architecture.py  test_benchmarks.py  test_cache.py  test_cli_run.py  test_cli_tune.py  test_cli_version.py  test_context.py  test_cost_tracker.py  test_desktop.py  test_llm_provider.py  test_mcp.py  test_memory.py  test_plugins.py  test_pricing.py  test_reflection.py  test_reflective_memory.py  test_retry.py  test_telemetry.py  test_token_counter.py  test_tuner.py
tests/fixtures/: code_question.json  repeated_qa.json  simple_qa.json
(+40 files in other folders)
